--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    font-size: 18px;
+    font-size: 1.1rem;
     background-color: #f4f4f4;
 }
 
@@ -11,7 +11,7 @@ header {
     background: #464f60;
     color: white;
     padding: 40px 0;
-    text-align: center;
+    
     position: relative;
 }
 
@@ -23,21 +23,19 @@ strong
 header img {
     max-width: 100%;
     height: auto;
-    margin-top: 20px;
+    
 }
 
 nav ul {
     list-style: none;
     padding: 0;
-    list-style-type: none
+    list-style-type: none;
     margin: 20px 0;
 }
 
 nav ul li {
     display: inline;
-    margin: 0 15px;
-    background-color: #45a049;
-}
+ }
 
 nav ul li a {
     color: white;
@@ -67,7 +65,7 @@ li
 
 
 .container {
-    width: 90%;
+    width: 99%;
     margin: 0 auto;
     text-align: center;
 }
